2004-08-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Improve error handling. 

2004-08-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbufanimation.c: parameters of Gdk::PixbufAnimation#get_iter, 
	Gdk::PixbufAnimationIter#advance are changed.
	* rbgdk-pixbuf.c: Remove Gdk::Pixbuf.new_subpixbuf and merge it to 
	Gdk::Pixbuf.new. 
	* sample/inline.rb, pixdata.rb: Added.

2004-08-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixdata.c: Rename Gdk::Pixdata#pixbuf to Gdk::Pixdata#to_pixbuf.
	Fix a bug of Gdk::Pixdata.deserialize, Gdk::Pixdata#pixel_data.
	Fix a memory leak of Gdk::Pixdata.from_pixbuf.

2004-07-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Remove Gdk::Pixbuf::VERSION which causes a segfault
	on Win32 and tml's GTK+-2.4.0. Pointed out by Laurent.

2003-12-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Fix lack of the data in Gdk::Pixbuf.pixels.
	(Bugs [857123])

2003-10-14  KATO Kazuyoshi  <kzys@users.sf.net>

	* rbgdk-pixbuf.c: Add Gdk::Pixbuf#pixels.

2003-10-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Fix memory leaks of Gdk::Pixbuf#scale, #composite. 
	(Bugs [814787])

2003-10-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Retry once if Gdk::Pixbuf.new is failed.

2003-09-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c:  Apply enum/flags.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Exit with 1 when the package is not found.
                                                                                
2003-08-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbgdk-pixbuf.c: use G_DEF_CONSTANTS() and define enum/flags classes.

2003-07-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Seprate Gdk::Pixbuf#scale to #scale and #scale!.
	Separate Gdk::Pixbuf#composite to #composite and #composite!.
	* sample/scale.rb, composite.rb: Follow changes.
	* ChangeLog: Revise date format.

2003-07-10  Mikael Magnusson <mikma@users.sourceforge.net>
